Back-end services implementation initial files

--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -146,7 +146,7 @@
             <h2 class="font-bold text-3xl text-[#004481] mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-6xl">Your Products</h2>
             <h3 class="font-semibold text-3xl lg:text-3xl text-[#004481] mt-5 lg:w-11/12 lg:text-left ">Accounts</h3>
             <template v-for="account in accounts">
-                <a :href="'../web/account.html?id=' + account.id" class="flex flex-col items-center lg:py-4 lg:items-start lg:px-10 p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 lg:-mt-1 mx-auto shadow-md shadow-slate-400 bg-gradient-to-r from-teal-200 to-lime-200 bg-cover bg-center rounded-lg">
+                <a :href="'../pages/account.html?id=' + account.id" class="flex flex-col items-center lg:py-4 lg:items-start lg:px-10 p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 lg:-mt-1 mx-auto shadow-md shadow-slate-400 bg-gradient-to-r from-teal-200 to-lime-200 bg-cover bg-center rounded-lg">
                     <h2 class="font-medium text-lg text-slate-800">Account Number: <span class="text-blue-950 font-bold text-xl">{{account.number}}</span></h2>
                     <div>
                         <h3 class="font-semibold text-lg text-slate-800">Balance:</h3>
