--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -99,7 +99,7 @@
                     <p class="text-white">Accounts</p>
                 </div>
                 <div class="group flex flex-col items-center">
-                    <a href="cards.html">
+                    <a href="./cards.html">
                         <svg class="group-hover:stroke-white"  width="38px" height="38px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#000000">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
@@ -113,7 +113,7 @@
                     <p class="text-gray-500 group-hover:text-gray-200">Cards</p>
                 </div>
                 <div class="group flex flex-col items-center">
-                    <a href="#">
+                    <a href="./loan-application.html">
                         <svg width="38px" class="group-hover:fill-white" height="38px" viewBox="0 0 512 512" id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#687482">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
@@ -160,7 +160,7 @@
             </div>
             <template v-if="loans.length == 0">
                 <h2 class="font-semibold text-3xl text-center lg:text-3xl text-[#004481] mt-6 lg:w-11/12 lg:text-left">Loans</h2>
-                <a href="#" class="w-10/12 text-center font-bold pb-8 lg:pb-20 text-2xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-4xl">Would you like to apply for a loan?</a>
+                <a href="./loan-application.html" class="w-10/12 text-center font-bold pb-8 lg:pb-20 text-2xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-4xl">Would you like to apply for a loan?</a>
             </template>
             <template v-else>
                 <h2 class="font-semibold text-3xl mt-6 text-center lg:text-3xl text-[#004481] lg:w-11/12 lg:text-left">Loans</h2>
@@ -196,7 +196,7 @@
                     <p class="text-xs text-[#004481]">Accounts</p>
                 </div>
                 <div class="flex flex-col items-center">
-                    <a href="cards.html">
+                    <a href="./cards.html">
                         <svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
@@ -210,7 +210,7 @@
                     <p class="text-xs">Cards</p>
                 </div>
                 <div class="flex flex-col items-center">
-                    <a href="#">
+                    <a href="./loan-application.html">
                         <svg width="32px" height="32px" viewBox="0 0 512 512" id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
