--- a/src/main/resources/static/web/pages/transfers.html
+++ b/src/main/resources/static/web/pages/transfers.html
@@ -59,7 +59,7 @@
             <div class="items-start w-11/12 my-2 top-0 lg:my-20">
                 <a href="./accounts.html" class="text-[#004481] mb-2 active:text-[#004481] text-md lg:text-lg justify-start border-solid border-b-2 border-[#004481]"> &lt; Return</a>
             </div>
-            <h1 class="text-center w-11/12 font-bold text-3xl text-[#004481]">Transfer Money</h1>
+            <h1 class="text-center w-11/12 font-bold text-3xl text-[#004481] lg:text-5xl">Transfer Money</h1>
             
             <form class="transfer-form" @submit.prevent="sentTransaction()">
                 <div class="flex flex-wrap justify-around mb-3"> 
@@ -155,7 +155,7 @@
                     <p class="text-xs">Cards</p>
                 </div>
                 <div class="flex flex-col items-center">
-                    <a href="#">
+                    <a href="./loan-application.html">
                         <svg width="32px" height="32px" viewBox="0 0 512 512" id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
