--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                     <a href="./web/pages/login.html" class="hidden group lg:flex flex-col lg:justify-center lg:bg-teal-600 lg:px-6  lg:text-white">Access</a>
                     <ul class="nav-menu">
                         <li class="nav-item border-t-2 border-t-[#A5D6FF]">
-                            <a href="./web/pages/login.html" class="nav-link">Login/Register</a>
+                            <a href="./web/pages/login.html" class="nav-link">Login | Register</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">About Us</a>
@@ -58,9 +58,6 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Joing Our Community</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Login/Register</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">FAQ</a>
