--- a/src/main/resources/static/web/pages/login.html
+++ b/src/main/resources/static/web/pages/login.html
@@ -16,7 +16,7 @@
         </a>
     </header>
     <div id="app">
-    <main class="flex flex-col gap-4 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[40rem]">
+    <main class="flex flex-col gap-4 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[82dvh]">
         <div class="w-10/12 gap-4 lg:w-8/12 py-6 lg:gap-8 items-center mt-5 flex flex-col lg:flex-row lg:justify-around ">
             <div class="flex flex-col lg:w-6/12 items-center border-b-2 gap-3 py-4 pb-9 lg:pr-10 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
                 <h1 class="font-bold text-2xl lg:text-3xl text-[#004481] lg:text-start">Log In To Your Online Bank Account</h1>
@@ -58,8 +58,9 @@
     </main>
     </div>  
     <footer>
-        <div class="flex items-center justify-center bg-[#f5f5f5] h-[4rem] border-t border-slate-700">
-            <p class="text-md text-gray-500">Assurance National Bank © 2023 - All Rights Reserved</p>
+        <div class="hidden lg:flex lg:flex-col lg:items-center lg:justify-center lg:gap-1 bg-white h-[4rem] border-t border-slate-700">
+            <p class="text-lg text-gray-500">Assurance National Bank © 2023 - All Rights Reserved</p>
+            <p class="text-xs text-gray-500">Created By: Daniela Ramos-Castro</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
