--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                             <a href="#" class="nav-link">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Find a Branch/ATM</a>
+                            <a href="#" class="nav-link">Find a Branch | ATM</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Mobile Banking App</a>
