--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -145,7 +145,7 @@
         </div>
         <main class="flex flex-col lg:gap-8 lg:flex-row lg:px-10 flex-wrap justify-center items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
             <h2 class="font-bold text-3xl text-[#004481] mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-6xl">Your Products</h2>
-            <fieldset class="border border-blue-500 w-11/12 rounded-lg mt-5">
+            <fieldset class="border  border-blue-500 w-11/12 rounded-lg mt-5">
                 <legend class="font-semibold text-3xl lg:text-4xl text-center text-[#004481] mt-5 lg:text-left lg:ml-2">Accounts</legend>
                 <div class="flex flex-wrap flex-col lg:flex-row">
                     <template v-for="account in accounts">
@@ -159,11 +159,37 @@
                         </a>
                     </template>
                 </div>
-                <div class="w-full flex justify-center my-3">
+                <div class="w-full lg:pb-5 md:flex-row flex gap-4 md:justify-around flex-col items-center justify-center my-3">
                     <button v-show="accounts.length < 3" @click="createAccount()" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Create Account</button>
+                    <button v-show="accounts.length > 0" @click="openAccountSelectionModal()" class="bg-transparent hover:bg-red-600 text-red-600 font-semibold hover:text-white py-2 px-4 border border-red-500 hover:border-transparent rounded">Delete Account</button>
                 </div>
             </fieldset>
             
+                <!-- <div v-if="showAccountSelectionModal">
+                    <transition name="fade">
+                        <div @click="onToggle()" class="absolute  h-[100dvh] bg-black opacity-70 inset-0 z-0"></div>
+                        <div class="w-full max-w-lg p-3 relative mx-auto my-auto rounded-xl shadow-lg bg-white">
+                          <div>
+                            <div class="text-center p-3 flex-auto justify-center leading-6"></div>
+                            <div class="p-3 mt-2 text-center space-x-4 md:block">
+                              <button
+                                @click="confirmDeleteCard()"
+                                class="mb-2 md:mb-0 bg-red-500 border border-red-500 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-md hover:shadow-lg hover:bg-red-600"
+                              >
+                                Delete Card
+                              </button>
+                              <button
+                                @click="onToggle()"
+                                class="mb-2 md:mb-0 bg-gray-200 border border-gray-300 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-gray-700 rounded-md hover:shadow-lg hover:bg-gray-300"
+                              >
+                                Cancel
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                    </transition>
+                </div> -->
+
             <template v-if="loans.length == 0">
                 <fieldset class="flex flex-col border border-blue-500 w-11/12 rounded-lg mt-8 mb-10 lg:mb-16">
                     <legend class="font-semibold text-3xl lg:text-4xl text-center text-[#004481] mt-5 lg:text-left lg:ml-2">Loans</legend>
